# multiemu

./: ARCHITECTURE.md  CHANGES.md  Cargo.toml  DROPDOWN_FEATURE.md  README.md  UI_FEATURES.md  output.txt
src/: cpu.rs  main.rs  rand.rs
src/emulators/: chip8.rs  mod.rs
src/emulators/chip8/: configs.rs  mod.rs  rand.rs
src/emulators/gameboy/: mod.rs  opcodes.rs
test_roms/: README.md  simple_test.gb  test_gb.asm
