[package]
name = "chip8"
version = "1.7.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
eframe = "0.32.3"
egui = "0.32.3"
env_logger = "0.11.8"
log = "0.4.28"
raplay = "0.4.3"
thiserror = "2.0.17"
